--- a/src/app/pages/noticiasNuevas/view-nuevas/view-nuevas.component.html
+++ b/src/app/pages/noticiasNuevas/view-nuevas/view-nuevas.component.html
@@ -38,6 +38,16 @@
         <td mat-cell *matCellDef="let row">{{formatDate(row.published_at)}}</td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button (click)="agregar(row)">
+            <mat-icon>star</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
